# nextgen-kernels-api

./: .gitignore  LICENSE.txt  README.md  jupyter_config.py  pyproject.toml
.github/workflows/: coverage.yml  quick-test.yml  test.yml
demo/: Listener Notebook.ipynb  demo.ipynb
docs/: message_filtering.md  websocket_filtering_config.md
nextgen_kernels_api/: __init__.py
nextgen_kernels_api/gateway/: managers.py
nextgen_kernels_api/services/kernels/: cache.py  client.py  client_manager.py  client_registry.py  kernelmanager.py  state_mixin.py  states.py
nextgen_kernels_api/services/kernels/connection/: kernel_client_connection.py
src/nextgen_kernel_manager/: __init__.py  kernel_manager.py  states.py  utils.py  websocket_connection.py
src/nextgen_kernels_api/: __about__.py  __init__.py  client.py  kernel_listener.py  kernel_manager.py  multi_kernel_manager.py  types.py  websocket_connection.py
src/nextgen_kernels_api/extension/: app.py  handlers.py
tests/: __init__.py  conftest.py  test_cache.py  test_connection_info_propagation.py  test_kernel_client_creation.py  test_message_utils.py  test_pre_connection_listeners.py  test_state_mixin.py
