[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nextgen-kernels-api"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Zach Sailer", email = "zsailer@apple.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "jupyter_server>1,<3",
  "anyio"
]

[project.urls]
Documentation = "https://github.com/Zach Sailer/nextgen-kernels-api#readme"
Issues = "https://github.com/Zach Sailer/nextgen-kernels-api/issues"
Source = "https://github.com/Zach Sailer/nextgen-kernels-api"

[tool.hatch.version]
path = "src/nextgen_kernels_api/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/nextgen_kernels_api tests}"

[tool.coverage.run]
source_pkgs = ["nextgen_kernels_api", "tests"]
branch = true
parallel = true
omit = [
  "src/nextgen_kernels_api/__about__.py",
]

[tool.coverage.paths]
nextgen_kernels_api = ["src/nextgen_kernels_api", "*/nextgen-kernels-api/src/nextgen_kernels_api"]
tests = ["tests", "*/nextgen-kernels-api/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
